--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <ul class = "con-link"> 
             <li class ="lione">GitHub: <a href="https://github.com/infraket" class="con-link">infraket</a></li>
             <li class ="litwo">E-mail: <a href="mailto:aveacvale@mail.ru" class="con-link">aveacvale@mail.ru</a></li>
-            <li class ="lthree">Telegram: <a href="https://t.me/infraket" class="con-link">@infraket</a></li>  
+            <li class ="lthree">Telegram: <a href="https://t.me/orderbyasc" class="con-link">@infraket</a></li>  
             <li class ="lifour">Behance: <a href="https://www.behance.net/infraket" class="con-link">infraket</a></li>
             
           </ul>
